--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RC'
 - !lcsh 'Medicine, Popular'
+- GITenberg
 title: 'The People''s Common Sense Medical Adviser in Plain English
 
   or, Medicine Simplified, 54th ed., One Million, Six Hundred
